<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupActivity">

    <TextView
        android:id="@+id/gr_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:text="@string/gr_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/insert_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/gr_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gr_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:text="@string/gr_people"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gr_name" />

    <TextView
        android:id="@+id/insert_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/gr_people"
        app:layout_constraintTop_toBottomOf="@+id/insert_name" />

    <TextView
        android:id="@+id/gr_key"
        android:layout_width="83dp"
        android:layout_height="17dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:text="@string/gr_key"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gr_people" />


    <TextView
        android:id="@+id/insert_key"
        android:layout_width="83dp"
        android:layout_height="17dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/gr_key"
        app:layout_constraintTop_toBottomOf="@+id/insert_people" />

    <TextView
        android:id="@+id/gr_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:text="@string/gr_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gr_key" />

    <TextView
        android:id="@+id/insert_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="56dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/gr_info"
        app:layout_constraintTop_toBottomOf="@+id/insert_key" />

    <TextView
        android:id="@+id/tmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="8dp"
        android:text="Waiting for ranging..."
        app:layout_constraintBottom_toTopOf="@+id/btn_safe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gr_info"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btn_safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="220dp"
        android:width="200dp"
        android:text="@string/safe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gr_info" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="76dp"
        android:width="200dp"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_safe"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>